Enable on Bukkit based servers.